Fix event row alignment

--- a/src/sentry/static/sentry/less/sentry.less
+++ b/src/sentry/static/sentry/less/sentry.less
@@ -284,7 +284,7 @@ header {
 }
 
 .nav-tabs {
-  border-bottom: 3px solid #f7f7f7;
+  border-bottom: 3px solid #f1f2f3;
   li {
     margin-bottom: -3px;
     > a {
@@ -304,7 +304,7 @@ header {
 
     &.active a, &.active a:hover, &.active a:focus {
       background: #fff;
-      border: 3px solid #f7f7f7 ;
+      border: 3px solid #f1f2f3 ;
       border-bottom-color: transparent;
     }
   }
@@ -473,7 +473,7 @@ footer {
 
 .filter-nav {
   margin-top: -5px;
-  margin-bottom: 18px;
+  margin-bottom: 14px;
 }
 
 // Search
@@ -637,8 +637,8 @@ a.icon-share {
 
 .group-header {
   display: table;
-  margin-top: -4px;
   width: 100%;
+  margin-bottom: 3px;
 }
 
 .stream-pagination {
@@ -900,6 +900,7 @@ a.icon-share {
   .event-users, .event-occurrences {
     vertical-align: middle;
     padding-left: 30px;
+    padding-right: 10px;
     width: 100px;
     span {
       color: #949ea4;
